--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       <div class="modal-body">
         <div class=" d-flex gap-3">
           
-          <div class="card bg-body-emphasis mb-3 border-danger" style="max-width: 18rem;">
+          <div class="card bg-body-emphasis mb-3 border-danger p-3" style="max-width: 18rem;">
             
             <div class="card-body">
-              <h5 class="card-title">Danger card title</h5>
-              <div class=" d-flex gap-3 p-5 ms-0">
+              <h5 id="detail.label" class="card-title">Danger card title</h5>
+              <div class=" d-flex gap-3 p-3">
                 <h6 class="text-success-emphasis">$10/month
                   Basic</h6>
-                <h6 class="text-warning">$50/month
+                <h6 class="text-w">$50/month
                   Pro</h6>
                 <h6 class="text-danger">Contact 
                   us
