--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="card bg-body-emphasis mb-3 border-danger p-3" style="max-width: 18rem;">
             
             <div class="card-body">
-              <h5 id="detail.label" class="card-title">Danger card title</h5>
+              <h5 class="card-title">Danger card title</h5>
               <div class=" d-flex gap-3 p-3">
                 <h6 class="text-success-emphasis">$10/month
                   Basic</h6>
